--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
       <header class="main-header">
         <nav class="navigation">
           <a class="main-logo" href="/">
-            <img src="./images/icons/logo-header.svg" width="140" height="70" alt="Логотип Седона">
+            <img src="./images/icons/logo-header.svg" width="140" height="70" alt="Логотип Седона.">
           </a>
           <ul class="header-menu">
             <li class="header-item">
@@ -28,14 +28,15 @@
           <ul class="header-buttons-list">
             <li class="button-item">
               <a class="button-search" href="#">
-                <span class="visually-hidden">Поиск</span>
-                <img class="search-icon" src="./images/icons/search.svg" width="20" height="20" alt="Иконка поиска">
+                <span class="visually-hidden">Поиск.</span>
+                <img class="search-icon" src="./images/icons/search.svg" width="20" height="20" alt="Иконка поиска.">
               </a>
             </li>
             <li class="button-item">
               <a class="button-favorite" href="#">
-                <span class="visually-hidden">Избранное</span>
-                <img class="search-icon" src="./images/icons/favorite.svg" width="18" height="17" alt="Иконка сердечко">
+                <span class="counter">12</span>
+                <span class="visually-hidden">Избранное.</span>
+                <img class="search-icon" src="./images/icons/favorite.svg" width="18" height="17" alt="Иконка сердечко.">
               </a>
             </li>
             <li class="button-item-want">
@@ -116,11 +117,11 @@
               <div class="range-scale">
                 <div class="range-bar" style="left: 10px; width: 220px;">
                   <button type="button" class="range-button range-button-left">
-                    <span class="visually-hidden">Изменить минимальную цену</span>
+                    <span class="visually-hidden">Изменить минимальную цену.</span>
                   </button>
 
                   <button type="button" class="range-button range-button-right">
-                    <span class="visually-hidden">Изменить максимальную цену</span>
+                    <span class="visually-hidden">Изменить максимальную цену.</span>
                   </button>
                 </div>
               </div>
@@ -145,20 +146,20 @@
               <ul class="search-results-change-view">
                 <li class="change-view-item">
                   <a class="change-view-button selected-view" href="#">
-                    <span class="visually-hidden">tiles</span>
-                    <img class="change-icons" src="./images/icons/icon-tiles.svg" width="16" height="14" alt="Иконка-плитка">
+                    <span class="visually-hidden">tiles.</span>
+                    <img class="change-icons" src="./images/icons/icon-tiles.svg" width="16" height="14" alt="Иконка-плитка.">
                   </a>
                 </li>
                 <li class="change-view-item">
                   <a class="change-view-button" href="#">
-                    <span class="visually-hidden">window</span>
-                    <img class="change-icons" src="./images/icons/icon-window.svg" width="16" height="14" alt="Иконка-окошко">
+                    <span class="visually-hidden">window.</span>
+                    <img class="change-icons" src="./images/icons/icon-window.svg" width="16" height="14" alt="Иконка-окошко.">
                   </a>
                 </li>
                 <li class="change-view-item">
                   <a class="change-view-button" href="#">
-                    <span class="visually-hidden">list</span>
-                    <img class="change-icons" src="./images/icons/icon-list.svg" width="16" height="14" alt="Иконка-список">
+                    <span class="visually-hidden">list.</span>
+                    <img class="change-icons" src="./images/icons/icon-list.svg" width="16" height="14" alt="Иконка-список.">
                   </a>
                 </li>
               </ul>
@@ -169,7 +170,7 @@
               <li class="product-list-item">
                 <article class="product-card">
                   <a class="product-link-wrapper" href="#">
-                    <img class="product-image" src="./images/hotel-1.jpg" width="300" height="212" alt="Фотография из отеля Amara Resort&Spa с видом на звездное небо">
+                    <img class="product-image" src="./images/hotel-1.jpg" width="300" height="212" alt="Фотография из отеля Amara Resort&Spa с видом на звездное небо.">
                     <h3 class="product-name">Amara Resort&Spa</h3>
                   </a>
                   <p class="product-description">
@@ -183,19 +184,19 @@
                   <div class="rating-wrapper">
                   <ul class="rating-list">
                     <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                     <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                     <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                     <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                     <li>
-                      <img class="rating-star visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="rating-star visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                   </ul>
                     <span class="rating-text">Рейтинг: 8,5</span>
@@ -206,7 +207,7 @@
               <li class="product-list-item">
                 <article class="product-card">
                   <a class="product-link-wrapper" href="#">
-                    <img class="product-image" src="./images/hotel-2.jpg" width="300" height="212" alt="Фотография из отеля Villas at Poco Diablo с видом на горы">
+                    <img class="product-image" src="./images/hotel-2.jpg" width="300" height="212" alt="Фотография из отеля Villas at Poco Diablo с видом на горы.">
                     <h3 class="product-name">Villas at Poco Diablo</h3>
                   </a>
                   <p class="product-description">
@@ -221,19 +222,19 @@
                   <div class="rating-wrapper">
                     <ul class="rating-list">
                       <li>
-                        <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                        <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                       </li>
                       <li>
-                        <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                        <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                       </li>
                       <li>
-                        <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                        <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                       </li>
                       <li>
-                        <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                        <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                       </li>
                       <li>
-                        <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                        <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                       </li>
                     </ul>
 
@@ -245,7 +246,7 @@
               <li class="product-list-item">
                 <article class="product-card">
                   <a class="product-link-wrapper" href="#">
-                    <img class="product-image" src="./images/hotel-3.jpg" width="300" height="212" alt="Фотография из отеля Desert Quail Inn с видом на каньон">
+                    <img class="product-image" src="./images/hotel-3.jpg" width="300" height="212" alt="Фотография из отеля Desert Quail Inn с видом на каньон.">
                     <h3 class="product-name">Desert Quail Inn</h3>
                   </a>
                   <p class="product-description">
@@ -259,19 +260,19 @@
                   <div class="rating-wrapper">
                   <ul class="rating-list">
                     <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                     <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                     <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                     <li>
-                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                     <li>
-                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                   </ul>
                     <span class="rating-text">Рейтинг: 6,9</span>
@@ -282,7 +283,7 @@
               <li class="product-list-item">
                 <article class="product-card">
                   <a class="product-link-wrapper" href="#">
-                    <img class="product-image" src="./images/hotel-4.jpg" width="300" height="212" alt="Фотография из отеля GreenTree Inn с видом на ночной каьон">
+                    <img class="product-image" src="./images/hotel-4.jpg" width="300" height="212" alt="Фотография из отеля GreenTree Inn с видом на ночной каьон.">
                     <h3 class="product-name">GreenTree Inn</h3>
                   </a>
                   <p class="product-description">
@@ -296,19 +297,19 @@
                   <div class="rating-wrapper">
                   <ul class="rating-list">
                     <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                     <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                     <li>
-                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                     <li>
-                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                     <li>
-                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка">
+                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
                     </li>
                   </ul>
                     <span class="rating-text">Рейтинг: 5,0</span>
@@ -349,7 +350,7 @@
             <p class="mailing-list-text about-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
             <form  class="mailing-list-form" action="https://echo.htmlacademy.ru">
               <label class="visually-hidden" for="email">
-                Ваш e-mail
+                Ваш e-mail.
               </label>
               <input class="input-email" type="email" id="email" name="email" placeholder="Ваш e-mail">
               <button class="submit-button" type="submit">
@@ -364,7 +365,7 @@
               <li class="social-list-item">
                 <a class="social-link" href=" https://vk.com/htmlacademy">
                   <span class="visually-hidden">
-                    Vkontakte
+                    Vkontakte.
                   </span>
                   <svg xmlns="http://www.w3.org/2000/svg" width="25" height="15" fill="none" aria-hidden="true" focusable="false">
                     <path fill="#83B3D3" fill-rule="evenodd" d="M24.1 1.8c.2-.5 0-1-.8-1h-2.6c-.7 0-1 .4-1.1.8 0 0-1.4 3.2-3.3 5.3-.6.6-.9.8-1.2.8-.2 0-.4-.2-.4-.8V1.8c0-.7-.2-1-.8-1h-4c-.5 0-.8.4-.8.6 0 .7 1 .8 1 2.6v3.8c0 .8 0 1-.4 1-.9 0-3-3.3-4.3-7-.3-.7-.5-1-1.2-1H1.6c-.8 0-1 .4-1 .8 0 .7 1 4 4.2 8.5C7 13.2 10 15 12.8 15c1.7 0 1.9-.4 1.9-1v-2.4c0-.7.2-.8.7-.8.4 0 1 .1 2.6 1.6 1.8 1.8 2 2.6 3 2.6h2.7c.7 0 1.1-.4 1-1.1-.3-.8-1.2-1.8-2.3-3-.6-.8-1.5-1.5-1.8-2-.4-.4-.3-.6 0-1 0 0 3.2-4.5 3.5-6Z" clip-rule="evenodd"/>
@@ -374,7 +375,7 @@
               <li class="social-list-item">
                 <a class="social-link" href="https://t.me/htmlacademy ">
                   <span class="visually-hidden">
-                    Telegram
+                    Telegram.
                   </span>
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="16" fill="none" aria-hidden="true" focusable="false">
                     <path fill="#83B3D3" d="M16.8 1 .8 7c-1 .4-1 1-.2 1.3l4.1 1.3 9.5-6c.5-.3.9-.1.5.2l-7.6 7-.3 4.1c.4 0 .6-.2.8-.4l2-2 4.1 3.1c.8.5 1.3.3 1.5-.7L18 2.2c.3-1-.4-1.6-1.1-1.2Z"/>
@@ -384,7 +385,7 @@
               <li class="social-list-item">
                 <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
                   <span class="visually-hidden">
-                    Youtube
+                    Youtube.
                   </span>
                   <svg xmlns="http://www.w3.org/2000/svg" width="23" height="18" fill="none" aria-hidden="true" focusable="false">
                     <path fill="#83B3D3" d="M19 .4H3.4C1.6.4.3 2 .3 3.8v10c0 2 1.3 3.6 3.2 3.6h15.7c1.6 0 3.1-1.6 3.1-3.4V3.8C22.1 2 20.8.4 19 .4ZM8 12.9v-8l7.3 4-7.3 4Z"/>
@@ -399,7 +400,7 @@
 
           <a class="footer-logo-htmlacademy" href="https://htmlacademy.ru/">
             <span class="visually-hidden">
-              html academy
+              html academy.
             </span>
             <svg xmlns="http://www.w3.org/2000/svg" width="115" height="34" fill="none" aria-hidden="true" focusable="false">
               <path fill="#000" d="M0 13.3v2.6h2.5v-2.6H0ZM11.6 4.9c-1.6 0-2.8.7-3.6 1.7h-.1V.4h-2v15.5h2v-5.3C7.9 8.5 9.2 7 11.2 7c1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.8c.1-3-1.8-5-4.5-5ZM26.6 5.2h-4.8V1.5h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V7.2h4.8v-2ZM41.1 5c-1.6 0-2.9.8-3.5 2h-.1a3.7 3.7 0 0 0-3.4-2c-1.4 0-2.5.8-3.1 1.8h-.1V5.2H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V9.3c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13c0 1.8 1 2.8 2.8 2.8h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.4h-2V13ZM28.9 20a4.9 4.9 0 0 0-3.9-1.7c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-2h.1v1.7h2V18.6h-2V20Zm-3.6 7.5a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.4c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3 3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6 1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20a4.9 4.9 0 0 0-3.9-1.7c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-2h.1v1.7h2V18.6h-2V20Zm-3.6 7.5a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.2a5 5 0 0 0-3.9-2c-3.1 0-5.4 2.4-5.4 5.7 0 3.3 2.2 5.6 5.4 5.6 1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.8h-2v6.4Zm-3.6 7.3a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.3a5.4 5.4 0 0 0-5.5 5.6c0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-3h8.8c.2-3.5-2-6.2-5.5-6.2Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5a3.2 3.2 0 0 1 3.2-2.6ZM98.2 18.3a4 4 0 0 0-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.4l-3.6-9h-2.2l4.8 11.7c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"/>
